# PRG2

./: README.md  readme.md
Introdução/: Anotações.md  Arquivos_e_Strings.md  Conta_palavras_e_Strings.cpp  Introdução_C++.md  Trabalhando_com_Arquivos.md
Introdução/Exercícios_Revisão_C/: Adivinho.c  Ajustador_de_Texto.c  Ajustador_de_Texto.md  Calculador_de_Notas.c  Calculador_de_Notas.md  Inverte_String.cpp  Linhas_Palavras_Caract.md  Linhas_palavras_caracter.cpp  Normaliza_Nome.cpp  Normaliza_Nome.md  Previsor_de_Tempo.c  Previsor_de_Tempo.md  Procura_uma_palavra.md
Projetos/: README.md
Unidade1/: Filas.md  Listas.md  Pilhas.md
Unidade2/: Agrupador_de_Palavras.cpp  Arvores.md  Tabela_Hash.md
Unidade3/: Alocação_Memória.md  Fila_Circular.md  Modelo.cpp  Projeto3  Projeto_De_Estrutura.md  Projeto_Tabela_Hash.md  Templates.md  vetor.h
chapter 1/: list concept.md  queue concept.md  readme.md  stack concept.md
chapter 2/: Binary Tree.md  Tabela_Hash.md  readme.md
chapter 3/: Fila_Circular.md  Templates.md  circular_queue.md  hash_table_project.md  memory_allocation.md  project.md  readme.md  template.md
chapter 3/Vetor_Dinâmico/: CMakeLists.txt  main.cpp  runTest.cpp
introduction/: Arquivos_e_Strings.md  Introdução_C++.md  Trabalhando_com_Arquivos.md  c++introduction.md  files_and_strings.md  initial_concepts.md  readme.md  working_with_files.md
introdução/: readme.md
projects/: README.md
projetos/: README.md  teste.md
unidade 1/: pilha.md  readme.md
unidade 2/: readme.md
unidade 3/: hash_table_project.md  readme.md
(+39 files in other folders)
